# st3

./: .gitignore  AMP_IMPLEMENTATION.md  CELL_TYPE_CONDITIONING.md  EXAMPLE_INFERENCE_CELL_TYPE.sh  INFERENCE.md  INFERENCE_AMP_SETUP.md  INFERENCE_WITH_CELL_TYPE.md  PERTURBSEQ_USAGE.md  QUICK_START_CELL_TYPE.md  README.md  TRAINING.md  assets  cell_load_config.toml  config.toml  datasets  experiments  models  pyproject.toml  requirements.txt  setup.py  test_amp.py
bash/: eval_pseq.sh  inf_conditional.sh  inf_generation.sh  inf_imputation.sh  inf_pseq.sh  inf_scgpt_imputation.sh  train.sh  train_mlm.sh  train_mlm_small.sh  train_pseq.sh  train_submit.sh
celltype_cond/: README.md
configs/: README.md  large.yaml  perturbseq_dry_run.yaml  perturbseq_medium.yaml  perturbseq_small.yaml  perturbseq_small_test.yaml  rnaseq_large.yaml  rnaseq_small.yaml
eval/: QUICKSTART.md  README.md  __init__.py  evaluate.py  example_usage.py  generation_metrics.py  reconstruction_metrics.py
examples/: cell_load.toml  cell_load_config.toml  cell_type_config.toml  data_visualisation.ipynb  demo_rnaseq.ipynb
nbs/: 02_example.ipynb  data_visualisation.ipynb  demo_perturbseq.ipynb  demo_rnaseq.ipynb  eval_sedd.ipynb  rnaseq.ipynb  scGPT_zero_shot.ipynb  scgpt_imputation.ipynb  test.ipynb  train_sedd_perturbation.ipynb
scripts/: PROTEIN_EMBEDDINGS_README.md  cell_embeddings.py  create_testsplit.py  download_esm2_model.py  eval_pseq.py  fetch_protein_sequences.py  generate_emb.py  generate_protemb.py  inference_conditional.py  inference_generation.py  inference_generation2.py  inference_imputation.py  inference_perturbseq.py  inference_scgpt_imputation.py  utils.py  (+7 more)
(+55 files in other folders)
