[project]
name = "pbmc-analysis"
version = "0.1.0"
description = "PBMC single-cell RNA-seq analysis with binarization"
requires-python = ">=3.10,<3.13"

dependencies = [
    "scanpy>=1.10.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

